deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-container
          image: pyltsin/otus:1
          ports:
            - name: wed
              containerPort: 8000
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 20
            httpGet:
              port: 8000
              path: /health
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            initialDelaySeconds: 20
            httpGet:
              port: 8000
              path: /health
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 1
            periodSeconds: 10
