Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: my-app
  ports:
    - port: 8001
      targetPort: 8000
      protocol: TCP
  type: NodePort
